--- a/index.html
+++ b/index.html
@@ -12,36 +12,46 @@
 </head>
 
 <body>
+  <div class="bg"></div>
 
 <div class="header">
   <div class="logo">
-    <a href="/"><img src="./assets/images/Logo_Vector.svg" alt="Company Logo" /></a>
+    <a href="./test.html"><img src="./assets/images/Logo_Vector.svg" alt="Company Logo" /></a>
   </div>
-  <div class="header-right">
-    <a href="#home">Home</a>
-    <a href="#services">Services</a>
+  <div class="logo-mobile">
+    <img src="./assets/images/Logo_Stacked.svg" alt="Company Logo Stacked"/>
+   </div>
+  <div id="header-right">
+    <a href="./test.html">Home</a>
+    <a href="./services.html">Services</a>
+    <a href="#about">About Us</a>
     <a href="#consult">Consultation</a>
-    <a href="#sign-in">Sign In</a>
+    <!-- <a href="#sign-in">Sign In</a> -->
   </div>
+  <ul id="mobile">
+    <li><a href="#home">Home</a></li>
+    <li></li><a href="./services.html">Services</a></li>
+    <li></li><a href="#about">About Us</a></li>
+    <li></li><a href="#consult">Consultation</a></li>
+    <!-- <li><a href="#sign-in">Sign In</a></li> -->
+  </ul>
 </div>
 
-<!-- Hero -->
-<section class="hero">
-  <img src="./assets/images/hero-image.jpg" alt=""/>
-      <h1>Accounting Solutions</h1>
-</section>
+<div class="pimg1">
+</div>
 
 <!-- Mission Statement -->
+<section class="section section-light">
 <div class="container">  
   <div class="container-mission">
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6">
+      <div class="col-sm-12 col-md-12 col-lg-6">
         <h2 class="leftAlign">Mission Statement</h2>
         <h3 class="leftAlign">To aid God's Church in fullfilling His love commandment</h3>
         <p class="leftAlign">We strive to provide tools and resources to the Church that enable the Church to carry out it's missions and operations. We focus on the finances so that the Church can focus on the people.</p>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
+      <div class="col-sm-12 col-md-12 col-lg-6">
        <div class="logo-stacked">
          <img src="./assets/images/Logo_Stacked.svg" alt="Company Logo Stacked"/>
         </div>
@@ -49,16 +59,18 @@
     </div>
   </div>
 </div>
+</section>
+
+<div class="pimg2">
+</div>
 
 <!-- Services -->
+<section>
 <div class="container">     
   <div class="container-services">
     <div class="row">
-      <div class="col-sm-12">
-        <h2>Our Services</h2>
-      </div>
-
-      <div class="col-sm-3">
+      <h2>Our Services</h2>
+      <div class="col-sm-12 col-md-6 col-lg-3">
         <div class="icons">
           <img src="./assets/images/payroll-icon.png" alt="Payroll Icon"/>
         </div>
@@ -68,7 +80,7 @@
         </p>
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-12 col-md-6 col-lg-3">
         <div class="icons">
           <img src="./assets/images/reporting-icon.png" alt="Reporting Icon"/>
         </div>
@@ -78,7 +90,7 @@
         </p>
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-12 col-md-6 col-lg-3">
         <div class="icons">
           <img src="./assets/images/bank-balance-icon.png" alt="Bank Balance Icon"/>
         </div>
@@ -88,7 +100,7 @@
         </p>
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-12 col-md-6 col-lg-3">
         <div class="icons">
           <img src="./assets/images/discount-icon.png" alt="Discount Icon"/>
         </div>
@@ -99,34 +111,44 @@
       </div>
     </div>
     
-      <div class="col-sm-12">
+      <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="plan-options">
-          <a href="#services">See Plan Options</a>
+          <a href="./services.html">See Plan Options</a>
         </div>
       </div>
     </div>
   
 </div>
+</section>
+
+<div class="pimg3">
+</div>
 
 <!-- Why Choose us -->
+<section>
 <div class="container">  
   <div class="container-why-us">
     <div class="row">
-
+      <div>
+        <h2 class="rightAlign">Why Choose Us?</h2>
+      </div>
       <div class="col-sm-6">
         <div class="cpa">
-           <img src="./assets/images/certified.svg" alt="Company Logo Stacked"/>
+           <img src="./assets/images/certified.svg" alt="Certified Ribbion"/>
          </div>
        </div>
 
       <div class="col-sm-6">
-        <h2 class="rightAlign">Why Choose Us?</h2>
         <p class="rightAlign">The Church Budget is backed by our parent company, Church Budget Envelope & Mailing Co. which has been a leader in the industry for over 100 years.</p>
-        <p class="rightAlign">We have on staff CPA's and bookkeepers availiable Monday-Friday to assist your needs via email, phone, chat or Zoom. </p>
+        <p class="rightAlign">We have on staff CPA's and bookkeepers availiable Monday-Friday to assist your needs via email or phone. 100% US based customer support team.</p>
       </div>
 
     </div>
   </div>
+</div>
+</section>
+
+<div class="pimg4">
 </div>
 
 <!-- contact info -->
@@ -142,7 +164,7 @@
       <p>157 West Pershing
       </br>Salem, OH 44460
       </br>330.337.1122
-      </br>crs@churchbudget.com</p>
+      </br>csr@churchbudget.com</p>
 
     </div>
   </div>
