--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <div class="header">
   <div class="logo">
-    <a href="./test.html"><img src="./assets/images/Logo_Vector.svg" alt="Company Logo" /></a>
+    <a href="./index.html"><img src="./assets/images/Logo_Vector.svg" alt="Company Logo" /></a>
   </div>
   <div class="logo-mobile">
     <img src="./assets/images/Logo_Stacked.svg" alt="Company Logo Stacked"/>
    </div>
   <div id="header-right">
-    <a href="./test.html">Home</a>
+    <a href="./index.html">Home</a>
     <a href="./services.html">Services</a>
     <a href="#about">About Us</a>
     <a href="#consult">Consultation</a>
