--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     <img src="./assets/images/Logo_Stacked.svg" alt="Company Logo Stacked"/>
    </div>
   <div id="header-right">
-    <a href="./test.html">Home</a>
+    <a href="./index.html">Home</a>
     <a href="./services.html">Services</a>
     <a href="#about">About Us</a>
     <a href="#consult">Consultation</a>
