--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
     <!-- <a href="#sign-in">Sign In</a> -->
   </div>
   <ul id="mobile">
-    <li><a href="#home">Home</a></li>
+    <li><a href="./index.html">Home</a></li>
     <li></li><a href="./services.html">Services</a></li>
     <li></li><a href="#about">About Us</a></li>
     <li></li><a href="#consult">Consultation</a></li>
