services page for mobile fixed

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="col-sm-12 col-md-12 col-lg-6">
         <h2 class="leftAlign">Mission Statement</h2>
         <h3 class="leftAlign">To aid God's Church in fullfilling His love commandment</h3>
-        <p class="leftAlign">We strive to provide tools and resources to the Church that enable the Church to carry out it's missions and operations. We focus on the finances so that the Church can focus on the people.</p>
+        <p class="leftAlign">We strive to provide tools and resources to the Church that enable it to carry out it's missions and operations. We focus on the finances so that the Church can focus on the people.</p>
       </div>
 
       <div class="col-sm-12 col-md-12 col-lg-6">
