--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <div id="header-right">
     <a href="./index.html">Home</a>
     <a href="./services.html">Services</a>
-    <a href="#about">About Us</a>
+    <a href="./about.html">About</a>
     <a href="#consult">Consultation</a>
     <!-- <a href="#sign-in">Sign In</a> -->
   </div>
   <ul id="mobile">
     <li><a href="#home">Home</a></li>
     <li></li><a href="./services.html">Services</a></li>
-    <li></li><a href="#about">About Us</a></li>
+    <li></li><a href="./about.html">About</a></li>
     <li></li><a href="#consult">Consultation</a></li>
     <!-- <li><a href="#sign-in">Sign In</a></li> -->
   </ul>
@@ -129,14 +129,16 @@
 <div class="container">  
   <div class="container-why-us">
     <div class="row">
-      <div>
-        <h2 class="rightAlign">Why Choose Us?</h2>
-      </div>
+
       <div class="col-sm-6">
         <div class="cpa">
            <img src="./assets/images/certified.svg" alt="Certified Ribbion"/>
          </div>
        </div>
+       
+      <div>
+        <h2 class="rightAlign">Why Choose Us?</h2>
+      </div>
 
       <div class="col-sm-6">
         <p class="rightAlign">The Church Budget is backed by our parent company, Church Budget Envelope & Mailing Co. which has been a leader in the industry for over 100 years.</p>
