--- a/services.html
+++ b/services.html
@@ -23,17 +23,20 @@
   <div id="header-right">
     <a href="./index.html">Home</a>
     <a href="./services.html">Services</a>
-    <a href="#about">About Us</a>
+    <a href="./about.html">About</a>
     <a href="#consult">Consultation</a>
     <!-- <a href="#sign-in">Sign In</a> -->
   </div>
   <ul id="mobile">
     <li><a href="./index.html">Home</a></li>
     <li></li><a href="./services.html">Services</a></li>
-    <li></li><a href="#about">About Us</a></li>
+    <li></li><a href="./about.html">About</a></li>
     <li></li><a href="#consult">Consultation</a></li>
     <!-- <li><a href="#sign-in">Sign In</a></li> -->
   </ul>
+</div>
+
+<div class="pimg1">
 </div>
 
 <!-- Plans -->
@@ -279,6 +282,9 @@
     <th>$500/ Month</th>
   </tr>
 </table>
+
+<div class="pimg4">
+</div>
 
 <!-- contact info -->
 <div class="footer">
