consult page added

--- a/services.html
+++ b/services.html
@@ -24,14 +24,14 @@
     <a href="./index.html">Home</a>
     <a href="./services.html">Services</a>
     <a href="./about.html">About</a>
-    <a href="#consult">Consultation</a>
+    <a href="./consult.html">Consultation</a>
     <!-- <a href="#sign-in">Sign In</a> -->
   </div>
   <ul id="mobile">
     <li><a href="./index.html">Home</a></li>
     <li></li><a href="./services.html">Services</a></li>
     <li></li><a href="./about.html">About</a></li>
-    <li></li><a href="#consult">Consultation</a></li>
+    <li></li><a href="./consult.html">Consultation</a></li>
     <!-- <li><a href="#sign-in">Sign In</a></li> -->
   </ul>
 </div>
@@ -44,7 +44,7 @@
   <div class="container-plans">
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
-        <h2>Here's how it works</h2>
+        <h2>Here's How It Works</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. </p>
         <h2>Choose Your Plan</h2>
         <p>Let us handle all your back office needs from making payments and handling payroll to finance reports. We offer three service plans to ensure you get all of the services you need, and none that you don't so you're only paying for the things you need.</p>
@@ -53,7 +53,9 @@
   </div>
 </div>
 
+
 <!-- Plan Options -->
+<div>
 <table>
   <tr>
     <th>SERVICES</th>
@@ -282,6 +284,18 @@
     <th>$500/ Month</th>
   </tr>
 </table>
+</div>
+
+<!-- Pamphlet -->
+<div class="container">  
+  <div class="container-plans">
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <p>Click <a href="./assets/files/Pamphlet.pdf" target="_blank">Here</a> for a printable pamphlet.</p>      
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="pimg4">
 </div>
@@ -299,7 +313,7 @@
     <p>157 West Pershing
     </br>Salem, OH 44460
     </br>330.337.1122
-    </br>crs@churchbudget.com</p>
+    </br>csr@churchbudget.com</p>
 
   </div>
 </div>
