--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <a href="./index.html">Home</a>
     <a href="./services.html">Services</a>
     <a href="./about.html">About</a>
-    <a href="#consult">Consultation</a>
+    <a href="./consult.html">Consultation</a>
     <!-- <a href="#sign-in">Sign In</a> -->
   </div>
   <ul id="mobile">
     <li><a href="#home">Home</a></li>
     <li></li><a href="./services.html">Services</a></li>
     <li></li><a href="./about.html">About</a></li>
-    <li></li><a href="#consult">Consultation</a></li>
+    <li></li><a href="./consult.html">Consultation</a></li>
     <!-- <li><a href="#sign-in">Sign In</a></li> -->
   </ul>
 </div>
@@ -135,7 +135,7 @@
            <img src="./assets/images/certified.svg" alt="Certified Ribbion"/>
          </div>
        </div>
-       
+
       <div>
         <h2 class="rightAlign">Why Choose Us?</h2>
       </div>
