rough draft complete

--- a/consult.html
+++ b/consult.html
@@ -37,6 +37,20 @@
   </ul>
 </div>
 
+<!-- Zoom -->
+<div class="container">  
+  <div class="container-consult">
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <h2>Schedule Your Free Consultation</h2>
+        <h3 class="h3">ZOOM</h3>
+        <p>A picture is worth a thousand words, but a Zoom call is worth 1 Million! Schedule your face to face meeting with the CEO today. Simply choose the day that works best, then the time and click confirm. You will receive a link in your email, when the day comes simply click the link to begin your meeting.</p>
+        <h3 class="h3">PHONE</h3>
+        <p>Camera Shy? Not a problem, choose "phone call" as the location for your meeting and we'll call you at the time that you choose. Simply choose the day that works best, then the time and click confirm.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/budget-22/30-minute-meeting-clone" style="min-width:320px;height:630px;"></div>
@@ -44,14 +58,23 @@
 <!-- Calendly inline widget end -->
 
 
-    <div class="contact-info">
-      <p>157 West Pershing
-      </br>Salem, OH 44460
-      </br>330.337.1122
-      </br>csr@churchbudget.com</p>
-
-    </div>
+<!-- contact info -->
+<div class="footer">
+  <div class="footer-icons">
+    <img src="./assets/images/home-icon.png" alt="Home Icon"/></br>
+    <img src="./assets/images/location icon.png" alt="Location Icon"/></br>
+    <img src="./assets/images/cell-icon.png" alt="Cell Phone Icon"/></br>
+    <img src="./assets/images/email-icon.png" alt="Envelope Icon"/>
   </div>
+
+  <div class="contact-info">
+    <p>157 West Pershing
+    </br>Salem, OH 44460
+    </br>330.337.1122
+    </br>csr@churchbudget.com</p>
+
+  </div>
+</div>
 
 </body>
 </html>
