--- a/consult.html
+++ b/consult.html
@@ -37,6 +37,9 @@
   </ul>
 </div>
 
+<div class="pimg1">
+</div>
+
 <!-- Zoom -->
 <div class="container">  
   <div class="container-consult">
@@ -57,6 +60,8 @@
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
 
+<div class="pimg4">
+</div>
 
 <!-- contact info -->
 <div class="footer">
